[project]
name = "Raijin"
version = "0.0.1"
description = "Raijin creates binary objects for use in financial services computations"
dependencies = [
  "tornado",
  "celery",
  "redis",
  "pydantic>=2.11.7",
  "requests>=2.32.5",
  "pydantic-settings>=2.10.1",
]
[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "black>=22.0",
    "pre-commit>=3.0",
]
